// This source file is part of the Swift.org open source project
//
// Copyright (c) 2020 Apple Inc. and the Swift project authors
// Licensed under Apache License v2.0 with Runtime Library Exception
//
// See http://swift.org/LICENSE.txt for license information
// See http://swift.org/CONTRIBUTORS.txt for the list of Swift project authors

syntax = "proto3";

import "EngineProtocol/action_execution.proto";
import "CASProtocol/data_id.proto";

// Key that represents the execution of an action after the input artifacts have been resolved into concrete data IDs,
// used to resolve the data IDs of the requested outputs.
message LLBActionExecutionKey {

    // Represents what type of action execution this key represents.
    oneof actionExecutionType {

        // A command line based action execution key.
        LLBCommandActionExecution command = 16;

        // A merge trees based action execution key.
        LLBMergeTreesActionExecution mergeTrees = 17;
    }
}

// The value for an ActionExecutionKey.
message LLBActionExecutionValue {

    // The list of outputs IDs that the action produced. This will be in the same order as requested in
    // actionExecutionType.
    repeated LLBDataID outputs = 1;

    // The data ID for the stdout of the action.
    LLBDataID stdoutID = 2;

    // The data ID for the stderr of the action.
    LLBDataID stderrID = 3;
}

// An action execution description for a command line invocation.
message LLBCommandActionExecution {

    // The spec for the action to execute.
    LLBActionSpec actionSpec = 1;

    // The list of inputs required for this action execution.
    repeated LLBActionInput inputs = 2;

    // The list of outputs expected from this action execution.
    repeated LLBActionOutput outputs = 3;

    // Identifier for the dynamic action executor for this action. If this is empty (which should be the majority of the
    // cases) actions will be scheduled on the executor specified for the build. If set, action execution will find the
    // dynamic executor with this identifier from the dynamic execution delegate and invoke that instead.
    string dynamicIdentifier = 4;
}

// An action execution description for a merge trees action.
message LLBMergeTreesActionExecution {

    // The list of inputs to be merged together. In this context, the path in LLBActionInput is considered to be the
    // root under which the artifact will be placed into.
    repeated LLBActionInput inputs = 1;
}
